Increased z-index of horizontal navigation to stop clash with horizontal navigation page.

--- a/src/scss/features/_navigation--vertical.scss
+++ b/src/scss/features/_navigation--vertical.scss
@@ -1,7 +1,7 @@
 .navigation {
   background-color: colour('brand', 'white');
   display: block;
-  z-index: 10;
+  z-index: 11;
   color: colour('functional', 'text');
   font-size: .75em;
   position: fixed;
@@ -38,6 +38,7 @@
     left: 0;
     right: 0;
     overflow-y: auto;
+    background-color: colour('brand', 'white');
   }
 
   .gs-nav__header {
